# cizzle-sprite-sheet-tester

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py
tests/: test_main.py
